--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning"
-        android:usesCleartextTraffic="true"
-                                                    >
-    <!--android:networkSecurityConfig="@xml/network_security_config"-->                                                                        >
+        android:usesCleartextTraffic="true" >
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -27,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Configuration"
-            android:label="Configuration"
+            android:label="Add"
             android:parentActivityName=".MainActivity">
         </activity>
     </application>
